Add unit tests for ModelConfig, CustomInstructionLoader, CustomInstruction, SkillDefinition, SkillParameter, and FileExtensionUtils
- Implement tests for ModelConfig to validate constructors and default values.
- Create tests for CustomInstructionLoader to ensure correct loading from local directories and handling of various instruction files.
- Add tests for CustomInstruction to verify content handling and formatting.
- Develop tests for SkillDefinition to check constructor validation, prompt building, and parameter validation.
- Introduce tests for SkillParameter to validate constructor behavior and equality checks.
- Implement tests for FileExtensionUtils to validate file extension extraction and language detection.